--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,13 +1,5 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -16,17 +8,45 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  list-style: none;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.letter-pair {
+  position: relative;
+}
+.converted {
+  position: absolute;
+  top: 1em;
+  left: 3px;
+}
+.letter {
+  padding: 0 5px;
+}
+
+table {
+  border-collapse: collapse;
+  /* border-style: solid;
+  border-color: black;
+  border-width: 0 0 1px 1px; */
+}
+td {
+  border: 1px solid #a0a0a0;
+  margin-bottom: -1px;
+  margin-left: -1px;
+  display: inline-block;
+  height: 5px;
+  width: 5px;
+}
+tr {
+  line-height: 0;
+  display: flex;
+}
+
+.cell-filled {
+  background: white;
 }
