--- a/src/App/App.css
+++ b/src/App/App.css
@@ -23,7 +23,7 @@ body {
 }
 
 .Header {
-  margin-top: 20px;
+  margin-top: 0;
 }
 
 ul {
@@ -76,7 +76,8 @@ tr {
 }
 
 .keyboard {
-  margin-top: 0.6em;
+  position: fixed;
+  bottom: 1em;
 }
 
 .description {
@@ -162,8 +163,9 @@ tr {
 }
 
 .unrecognized {
+  margin-top: 5px;
   height: 1.5em;
-  font-size: 76%;
+  font-size: 73%;
 }
 
 .unrecognized.hidden {
@@ -172,7 +174,6 @@ tr {
 
 .Text-Label {
   color: #9e9e9e;
-  margin-bottom: 5px;
 }
 
 .Text {
